# weechat-signal-ocaml

./: .gitignore  Makefile  README.md  dune-project
src/lib/: action.ml  address.ml  contact.ml  dataMessage.ml  dune  group.ml  groupInfo.ml  groupV2Info.ml  json.ml  messageEnveloppe.ml  preview.ml  quote.ml  receiptMessage.ml  remoteDelete.ml  sharedContact.ml  socket.ml  syncMessage.ml  syntax.ml
src/lib/api/: address.ml  attachment.ml  blockedListMessage.ml  callMessage.ml  configurationMessage.ml  contactInfo.ml  dataMessage.ml  dune  groupInfo.ml  groupList.ml  groupV2Info.ml  mention.ml  messageEnveloppe.ml  messageRequestResponseMessage.ml  quote.ml  quotedAttachment.ml  reaction.ml  readMessage.ml  receiptMessage.ml  sentTranscriptMessage.ml  sticker.ml  stickerPackOperationMessage.ml  syncMessage.ml  typingMessage.ml  verifiedMessage.ml  versionMessage.ml  viewOnceOpenMessage.ml
src/lib/helpers/: dune  helpers.ml
src/plugin/: Makefile  colors.ml  commands.ml  description.c  dune  handlers.ml  signal_weechat_ocaml.ml  storage.ml
